<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.SoftwareProject.beuth.EinstellungenActivity" >
    
    <EditTextPreference
        android:title="@string/themes_list"
        android:key="@string/themes_title"
        android:defaultValue="@string/themes_default"
        android:inputType="textMultiLine" />
    
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:key="prefUsername"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendPush"
            android:summary="@string/pref_send_push_summary"
            android:title="@string/pref_send_push" >
        </CheckBoxPreference>
        
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
        
        <ListPreference
            android:key="prefRepQuestions"
            android:entries="@array/repQuestions"
            android:summary="@string/pref_rep_questions_summary"
            android:entryValues="@array/repQuestionsValues"
            android:title="@string/pref_rep_questions" />
        
        <ListPreference
            android:key="prefTimeAnswers"
            android:entries="@array/timeAnswers"
            android:summary="@string/pref_time_answers_summary"
            android:entryValues="@array/timeAnswersValues"
            android:title="@string/pref_time_answers" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
        
    </PreferenceCategory>
    
</PreferenceScreen>