<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.SoftwareProject.beuth.MainActivity" >

    <!-- Diese Small-Version ist für Handys geeignet.
    Für Tabletts bitte folgende Änderungen vornehmen:
    Large: marginTop="20dp" statt 18dp
    and textSize="30sp" statt 15sp
    and textAppearance="?android:attr/textAppearanceLarge" statt ...Small
    -->
    
    <TextView
        android:id="@+id/entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/entry"
    	android:textSize="15sp" />

	<Button
        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/start_quiz" />
	
	<TextView
        android:id="@+id/stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:text=""
    	android:textAppearance="?android:attr/textAppearanceSmall" />
	
	<RadioGroup
        android:id="@+id/radioQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/stage" >

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_yes" 
            android:layout_marginTop="18dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_no"
            android:layout_marginTop="18dp" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/button_answer" />  
	
	<Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
		android:orientation="horizontal"        
		android:layout_toLeftOf="@+id/pause"
		android:layout_below="@+id/buttonAnswer"
        android:layout_marginTop="15dp"
        android:text="@string/back" />
	
	<Button
		android:id="@+id/pause"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal"
		android:layout_below="@+id/buttonAnswer"
		android:layout_marginTop="15dp"
		android:text="@string/stage_pause" />
	
	<Button
		android:id="@+id/next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal"
		android:layout_toRightOf="@+id/pause"
		android:layout_below="@+id/buttonAnswer"
		android:layout_marginTop="15dp"
		android:text="@string/next" />
	
	<Button
        android:id="@+id/wiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
		android:orientation="horizontal"        
		android:layout_toLeftOf="@+id/google"
		android:layout_below="@+id/pause"
        android:layout_marginTop="15dp"
        android:text="@string/gotoWikipedia" />
	
	<Button
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
		android:orientation="horizontal"        
		android:layout_below="@+id/pause"
        android:layout_marginTop="15dp"
        android:text="@string/gotoGoogle" />
	
	<Button
		android:id="@+id/returnlanding"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal"
		android:layout_toRightOf="@+id/google"
		android:layout_below="@+id/pause"
		android:layout_marginTop="15dp"
		android:text="@string/return_landing" />
	
	<!-- Linie Start -->
    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="18dp"
        android:layout_below="@+id/google"
        android:background="#FF000000" />
    <!-- Linie Ende -->
    
	<EditText
	    android:id="@+id/commentAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/line"
	    android:layout_gravity="start"
	    android:background="@color/blueFields"
	    android:hint="@string/comment_Answer"
	    android:inputType="textMultiLine"
	    android:minHeight="25dp" />
	
	<RadioGroup
        android:id="@+id/radioComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/commentAnswer" >

        <RadioButton
            android:id="@+id/radioNotCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_notCorrect" 
            android:layout_marginTop="0dp" />

    </RadioGroup>
    
	<Button
	    android:id="@+id/saveComment"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/google"
	    android:layout_below="@+id/commentAnswer"
	    android:text="@string/save_Comment" />
		
	<TextView
        android:id="@+id/textUserSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity" />
	
	<TextView 
		android:id="@+id/error" 
		android:layout_width="match_parent" 
		android:layout_height="match_parent" /> 
	
</RelativeLayout>