<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.SoftwareProject.beuth.LandingActivity" >
    
    <!-- Layout zur LandingActivity (Start/Menu) -->
    
    <!-- Bild aus res/drawable -->
	<ImageView
		android:id="@+id/splash"
		android:contentDescription="@string/peatDescription"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:src="@drawable/splash" />
	
	<!-- Oeffnet das Quizz -->
	<Button
        android:id="@+id/game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/splash"
        android:text="@string/game" />  
	
	<!-- Oeffnet QuestionInputActivity -->
	<Button
        android:id="@+id/question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
		android:layout_below="@+id/game"
        android:text="@string/question" />
	
	<!-- Oeffnet UserThemeActivity -->
	<Button
        android:id="@+id/theme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
		android:layout_below="@+id/question"
        android:text="@string/theme" />
	
	<!-- Oeffnet die Einstellungen der App -->
	<Button
        android:id="@+id/setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
		android:layout_below="@+id/theme"
        android:text="@string/setting" />
	
</RelativeLayout>