<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context="com.SoftwareProject.beuth.UserThemeActivity" >

    <TextView
        android:id="@+id/headUserThemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="22sp"
        android:text="@string/themes_list" />

    <!-- Linie -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="18dp"
        android:layout_height="2dip"
        android:background="#FF000000" />
    
    <TextView
        android:id="@+id/userThemesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/themes_default" >

</TextView>

    <Button
        android:id="@+id/addTheme"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/add" />

</LinearLayout>